# Artemis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build-dashboard.yml  ci.yml
artemis/: __init__.py
artemis/action/: engagement_log.py
artemis/api/: auth.py  metrics.py  rest.py  websocket.py
artemis/cognition/: pipeline.py
artemis/core/: bus.py  config.py  config_validator.py  logging.py  types.py
artemis/fusion/: correlator.py  kalman.py  swarm_analyzer.py  threat_map.py  track_manager.py
artemis/mesh/: aggregator.py  publisher.py  subscriber.py  triangulator.py
artemis/perception/: base.py
dashboard/: index.html  next.config.mjs  package-lock.json  package.json
dashboard/src/: App.tsx  types.ts
docs/: ARCHITECTURE.md  DETECTION_LOGIC.md  HARDWARE_SETUP.md  LEGAL.md  MESH_PROTOCOL.md  NODE_SETUP.md  SENSOR_GUIDE.md  artemis.md
hub/: main.py
hub/config/: hub_default.yaml
infra/: docker-compose.yml
infra/k8s/: dashboard.yaml  grafana.yaml  hub.yaml  ingress.yaml  mosquitto.yaml  namespace.yaml  network-policy.yaml  node.yaml  pdb.yaml  prometheus.yaml  rbac.yaml  secrets.yaml
infra/prometheus/: prometheus.yml
models/: README_models.md
node/: main.py
scripts/: benchmark.py  reset_node.sh  setup_node.sh  test_acoustic.py  test_optical.py  test_radar.py  test_rf.py  train_acoustic_model.py  verify_install.py
sim/: acoustic_emulator.py  drone_swarm.py  optical_emulator.py  radar_emulator.py  rf_emulator.py
(+53 files in other folders)
