[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis"
version = "1.0.0"
description = "ARTEMIS — Distributed Multi-Sensor Counter-Drone Platform"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
artemis-hub = "hub.main:main"
artemis-node = "node.main:main"
artemis-sim = "sim.drone_swarm:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["artemis*", "sim*"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
